[gd_scene format=3 uid="uid://bbmhv7o4d0e5n"]

[ext_resource type="Script" uid="uid://bjv8on3ay281n" path="res://ui.gd" id="1_fyqef"]

[node name="Control" type="Control" unique_id=570524337]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="GameOverWindow" type="ColorRect" parent="." unique_id=842061646]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -94.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.19880001, 0.164, 0.2, 1)

[node name="Label" type="Label" parent="GameOverWindow" unique_id=1503437557]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Hey! Stop that! I am calling the cops!"

[node name="Label2" type="Label" parent="GameOverWindow" unique_id=192032329]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.78, 0.78, 1)
theme_override_font_sizes/font_size = 14
text = "You lost"

[node name="RetryButton" type="Button" parent="GameOverWindow" unique_id=1179277887]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -62.0
offset_right = -3.0002136
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="HelpButton" type="Button" parent="GameOverWindow" unique_id=38125478]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -62.0
offset_right = 96.99979
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Help"

[node name="GameWonWindow" type="ColorRect" parent="." unique_id=379344072]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -94.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.078238584, 0.20349598, 0.18202698, 1)

[node name="Label" type="Label" parent="GameWonWindow" unique_id=479138754]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 55.0
grow_horizontal = 2
text = "You won!"

[node name="Label2" type="Label" parent="GameWonWindow" unique_id=53957208]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.78, 0.78, 1)
theme_override_font_sizes/font_size = 14
text = "You lost"

[node name="RetryButton2" type="Button" parent="GameWonWindow" unique_id=428656823]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -62.0
offset_right = 47.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[connection signal="pressed" from="GameOverWindow/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverWindow/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="GameWonWindow/RetryButton2" to="." method="_on_retry_button_2_pressed"]
